<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mapa"
            android:icon="@drawable/ic_map_icon"
            android:title="@string/Ruta" />
        <item
            android:id="@+id/reto"
            android:icon="@drawable/ic_reto_icon"
            android:title="@string/desafio" />
        <item
            android:id="@+id/cupon"
            android:icon="@drawable/ic_cupon_icon"
            android:title="@string/Cupones" />
        <item
            android:id="@+id/ajustes"
            android:icon="@drawable/ic_settings_icon"
            android:title="@string/setting" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share_icon"
            android:title="@string/share" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_abaut_icon"
            android:title="@string/About" />
        <item
            android:id="@+id/administrar"
            android:icon="@drawable/ic_admin"
            android:title="@string/Admin"/>
        <item
            android:id="@+id/verificar"
            android:icon="@drawable/ic_youtube_searched_for_black_24dp"
            android:title="@string/Veri"/>
    </group>


</menu>
